# supertonic

./: .gitignore  ANDROID_UPDATE_WORKFLOW.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  TODO.md  UPDATE.md  compile_jni_libs.ps1  compile_jni_libs.sh  compile_jni_libs_cpp.ps1  compile_jni_libs_cpp.sh  test_extension.html
.claude/: settings.local.json
.github/workflows/: android-release.yml
android/: BuildRelease.txt  GEMINI.md  RELEASE_NOTES.md  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aidl/com/hyperionics/supertonic/tts/service/: IPlaybackListener.aidl  IPlaybackService.aidl
android/app/src/main/aidl/io/github/gregko/supertonic/tts/service/: IPlaybackListener.aidl  IPlaybackService.aidl
android/app/src/main/java/com/brahmadeo/supertonic/tts/: LexiconActivity.kt  LicensesActivity.kt  MainActivity.kt  SupertonicTTS.kt
android/app/src/main/java/com/brahmadeo/supertonic/tts/service/: PlaybackService.kt  SupertonicTextToSpeechService.kt
android/app/src/main/java/com/brahmadeo/supertonic/tts/ui/: AboutDialog.kt  LicensesScreen.kt  MainScreen.kt
android/app/src/main/java/com/brahmadeo/supertonic/tts/utils/: AssetInstaller.kt
android/app/src/main/java/com/hyperionics/supertonic/tts/: HistoryActivity.kt  LexiconActivity.kt  LicensesActivity.kt  MainActivity.kt  PlaybackActivity.kt  QueueActivity.kt  SavedAudioActivity.kt  SupertonicTTS.kt
android/app/src/main/java/com/hyperionics/supertonic/tts/service/: PlaybackService.kt  SupertonicTextToSpeechService.kt
android/app/src/main/java/com/hyperionics/supertonic/tts/ui/: AboutDialog.kt  HistoryScreen.kt  LexiconScreen.kt  LicensesScreen.kt  MainScreen.kt  PlaybackScreen.kt  QueueScreen.kt  SavedAudioScreen.kt
android/app/src/main/java/com/hyperionics/supertonic/tts/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/java/com/hyperionics/supertonic/tts/utils/: AssetInstaller.kt  CurrencyNormalizer.kt  HistoryManager.kt  LanguageDetector.kt  LexiconManager.kt  NumberUtils.kt  QueueManager.kt  TextNormalizer.kt  WavUtils.kt
android/app/src/main/java/io/github/gregko/supertonic/tts/: HistoryActivity.kt  LexiconActivity.kt  LicensesActivity.kt  MainActivity.kt  PlaybackActivity.kt  QueueActivity.kt  SavedAudioActivity.kt  SupertonicTTS.kt
android/app/src/main/java/io/github/gregko/supertonic/tts/service/: PlaybackService.kt  SupertonicTextToSpeechService.kt
android/app/src/main/java/io/github/gregko/supertonic/tts/ui/: AboutDialog.kt  HistoryScreen.kt  LexiconScreen.kt  LicensesScreen.kt  MainScreen.kt  PlaybackScreen.kt  QueueScreen.kt  (+1 more)
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-pt/: strings.xml
chrome_extension/: README.md  background.js  host_manifest.json  manifest.json  offscreen.js  popup.html
cpp/: CMakeLists.android.txt  helper.cpp  helper.h  jni_bridge.cpp
cpp/android/: CMakeLists.txt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: helper.rs  lib.rs
tools/: Build-SupertonicAndroid.ps1  Get-SupertonicAndroidStatus.ps1  Import-SupertonicAssets.ps1  Supertonic.AndroidUpdate.Common.ps1  Update-AndroidInputsLock.ps1  Update-OnnxRuntimeAndroid.ps1  android-inputs.lock.json
(+14 files in other folders)
